--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.1",
     "express-jwt": "^6.0.0",
     "express-validator": "^6.6.1",
+    "googleapis": "^60.0.1",
     "http-errors": "~1.6.3",
     "jade": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
