--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "admin": "node createAdmin.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -24,6 +25,8 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
     "nodemon": "^2.0.4",
+    "prompt-sync": "^4.2.0",
+    "socket.io": "^2.3.0",
     "uuid": "^8.3.0"
   }
 }
