--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.13.1",
     "react-inline-editing": "^1.0.10",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-tabs-redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
