--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "react-inline-editing": "^1.0.10",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-tabs-redux": "^4.0.0"
+    "react-tabs-redux": "^4.0.0",
+    "socket.io": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
